Fix existing sonar comments